deploy: fda2e3a3c772dd594df738043808e528dc04268f

--- a/patterns/creational/builder.html
+++ b/patterns/creational/builder.html
@@ -431,6 +431,7 @@
         <h4 id="назначение" class="section"><a class="anchor-link left" href="#назначение"><i class="icofont-laika link">&#xef71;</i></a>Назначение</h4>
         <p>Отделение построения сложного объекта от его представления, 
         чтобы один и тот же процесс построения мог создавать разные представления.</p>
+        <p><a href="https://scalabook.gitflic.space/docs/blog/builder-pattern">Более детализированное рассмотрение шаблона</a></p>
         
         <h4 id="диаграмма" class="section"><a class="anchor-link left" href="#диаграмма"><i class="icofont-laika link">&#xef71;</i></a>Диаграмма</h4>
         <p><img src="https://upload.wikimedia.org/wikipedia/ru/2/28/Builder.gif" alt="Builder"></p>
